Cleaned up BallotReader